css reset failas

--- a/index.html
+++ b/index.html
@@ -2,40 +2,61 @@
 <html>
 <head>
 <title>Puslapio pavadinimas</title>
-<p>nu kas bus?</p>
-<div> o kas dabar</div>
+    <link rel="stylesheet" href="/css/reset.css">
+    <link rel="style" href="/css/mano.css">
+
 </head>
 <body>
 <h1>Tai yra antraðtë</h1>
-<p>Pirmas bandymas raðyti kodà.
-<i>Ði eilute yra pasvirusi</i>
-<sub>Maþosios raidës, eilutë po eilute</sub>
-<p>toliau papidomas raðinëjimas</p>
-<p>Tai yra paragrafas.</p>
-<del>kodël gi ðito teksto neðtrynus 21:04 2019.08.19 paspaudus contrl f5</del>
-<div>0 èia yra turinio skyrius.<strong>Labai labai super svarbi eilutë</strong>
-<p>gal gal gal, o kodël gi ne ?</p>
-
+<p>pirmas sakinys</p>
+<p>antras sakinys</p>
+<p>treèias sakinys</p>
+<h2>Tai yra antroji antrasðtë</h2>
+<p>pirmas sakinys</p>
 <p>
-<i>italija, spagetis ir picos
-<i> italiskai, why not ?
-<sub>bazilikas
-<del> padaþai su pica, grieþtai ne</del>
-<sub>daug daug surio</p>
-<p style="background-color:Tomato;">Cia bus picos padaþo spalva </p>
-
+  <ins> <i> <b>antras sakinys</b></i></ins>
+</p>
+<h3>Treèioji antraðtë</h3>
 <p>
-
-Pirma diena
-Pirma pamoka
-Pirmos valandos
+    <a href="https://www.youtube.com/watch?v=3Mgtoa_LanU">
+  Linkas youtube
+    </a>
 </p>
 <p>
-pirma diena <br> pirma pamoka <br> paskutinë valanda </p>
-
-<h1 style="font-size:300%;"> Bus didelis sriftas</h1>
-
-
-
+    <a href="https://www.google.com/search?client=firefox-b-d&q=kaunas" target="_blank">
+        Linkas i google nuoroda
+    </a>
+</p>
+<p>
+    <a href="page not found">
+        Nuoroda i niekur
+    </a>
+</p>
+<h4>Ketirtoji antraðtë</h4>
+<p>
+    <img src="/images/is_0405.jpg"/>
+</p>
+<p>
+    <img src="https://car-pictures.cars.com/images/?IMG=USD00SUS311A021001.jpg&HEIGHT=600">
+</p>
+<p>
+    <img src="/images/car-pictures.cars.com.jpg" alt="masina" widht="50" height="40">
+</p>
+<h5>Penktoji antraðtë</h5>
+<p>
+    <img src="/images/kalnas.jpg" alt="kalnas" widht="100" height="100">
+</p>
+<p>
+    <img src="/images/bagazine.jpg" alt="bagazine" widht="150" height="150">
+</p>
+<p>
+    <a href="https://www.google.com/">
+        <img src="/images/kalnas.jpg" alt="kalnas" widht="100" height="100">
+</p>
+<p>
+    <a href="https://upload.wikimedia.org/wikipedia/commons/e/e0/Clouds_over_the_Atlantic_Ocean.jpg">
+        <img src="/images/Clouds_over_the_Atlantic_Ocean.jpg" alt="vandenynas" width="150">
+    </a>
+</p>
 </body>
 </html>
