--- a/index.html
+++ b/index.html
@@ -1,62 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Puslapio pavadinimas</title>
+    <title>Puslapio pavadinimas</title>
     <link rel="stylesheet" href="/css/reset.css">
-    <link rel="style" href="/css/mano.css">
-
+    <link rel="stylesheet" href="/css/mano.css">
 </head>
 <body>
-<h1>Tai yra antraðtë</h1>
-<p>pirmas sakinys</p>
-<p>antras sakinys</p>
-<p>treèias sakinys</p>
-<h2>Tai yra antroji antrasðtë</h2>
-<p>pirmas sakinys</p>
-<p>
-  <ins> <i> <b>antras sakinys</b></i></ins>
-</p>
-<h3>Treèioji antraðtë</h3>
-<p>
-    <a href="https://www.youtube.com/watch?v=3Mgtoa_LanU">
-  Linkas youtube
-    </a>
-</p>
-<p>
-    <a href="https://www.google.com/search?client=firefox-b-d&q=kaunas" target="_blank">
-        Linkas i google nuoroda
-    </a>
-</p>
-<p>
-    <a href="page not found">
-        Nuoroda i niekur
-    </a>
-</p>
-<h4>Ketirtoji antraðtë</h4>
-<p>
-    <img src="/images/is_0405.jpg"/>
-</p>
-<p>
-    <img src="https://car-pictures.cars.com/images/?IMG=USD00SUS311A021001.jpg&HEIGHT=600">
-</p>
-<p>
-    <img src="/images/car-pictures.cars.com.jpg" alt="masina" widht="50" height="40">
-</p>
-<h5>Penktoji antraðtë</h5>
-<p>
-    <img src="/images/kalnas.jpg" alt="kalnas" widht="100" height="100">
-</p>
-<p>
-    <img src="/images/bagazine.jpg" alt="bagazine" widht="150" height="150">
-</p>
-<p>
-    <a href="https://www.google.com/">
-        <img src="/images/kalnas.jpg" alt="kalnas" widht="100" height="100">
-</p>
-<p>
-    <a href="https://upload.wikimedia.org/wikipedia/commons/e/e0/Clouds_over_the_Atlantic_Ocean.jpg">
-        <img src="/images/Clouds_over_the_Atlantic_Ocean.jpg" alt="vandenynas" width="150">
-    </a>
-</p>
+<div id="grid">
+    <div class="grid_item_1"> Text text text </div>
+    <div class="grid_item_2"> langas langas langas </div>
+    <div class="grid_item_3"> stalas stalas stalas </div>
+    <div class="grid_item_4"> barsukas barsukas barsukas </div>
+    <div class="grid_item_5"> pele pele pele </div>
+</div>   
 </body>
 </html>
