--- a/index.html
+++ b/index.html
@@ -4,14 +4,19 @@
     <title>Puslapio pavadinimas</title>
     <link rel="stylesheet" href="/css/reset.css">
     <link rel="stylesheet" href="/css/mano.css">
+    <link rel="stylesheet" href="css/animacija.css">
 </head>
 <body>
 <div id="grid">
-    <div class="grid_item_1"> Text text text </div>
+    <div class="grid_item_1"> Puslapio virsutine dalis
+
+    </div>
     <div class="grid_item_2"> langas langas langas </div>
     <div class="grid_item_3"> stalas stalas stalas </div>
     <div class="grid_item_4"> barsukas barsukas barsukas </div>
-    <div class="grid_item_5"> pele pele pele </div>
+    <div class="grid_item_5"> Visos teisës saugomos
+
+    </div>
 </div>   
 </body>
 </html>
