--- a/index.html
+++ b/index.html
@@ -4,19 +4,21 @@
     <title>Puslapio pavadinimas</title>
     <link rel="stylesheet" href="/css/reset.css">
     <link rel="stylesheet" href="/css/mano.css">
-    <link rel="stylesheet" href="css/animacija.css">
 </head>
 <body>
+<img src="/images/Pirato veliava.jpg" alt="veliava"/>
 <div id="grid">
-    <div class="grid_item_1"> Puslapio virsutine dalis
-
+    <div class="grid_item_1"> <ul>
+        <a class="active" href="#About-me">Apie mane</a>
+        <a href="#Portfolio">Portfolio</a>
+        <a href="#contact">Kontaktai</a>
+         <a href="#about">Admin</a>
+    </ul>
     </div>
-    <div class="grid_item_2"> langas langas langas </div>
-    <div class="grid_item_3"> stalas stalas stalas </div>
-    <div class="grid_item_4"> barsukas barsukas barsukas </div>
-    <div class="grid_item_5"> Visos teisës saugomos
-
-    </div>
+    <div class="grid_item_2"></div>
+    <div class="grid_item_3"></div>
+    <div class="grid_item_4"></div>
+    <div class="grid_item_5"> Visos teisës saugomos</div>
 </div>   
 </body>
 </html>
