--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <meta name="viewport" content="width=device-width, initial-scale=5">
     <link rel="stylesheet" href="/css/mano.css">
+    <script src="js/batmobile.js"></script>
 </head>
 <body>
 <div id="grid">
@@ -23,7 +24,6 @@
             <a href="#login">Admin</a>
         </a>
     </div>
-</div>
     <div class="gridItem4">
         <div class="skills">
             <div class="skill html">HTML
@@ -47,23 +47,18 @@
     <main>
         <h1>Pagrindinis puslapis</h1>
         <p>Pirmas paragrafas</p>
-        Batman is a fictional superhero appearing in American comic books published by DC Comics. The character was created by artist Bob Kane and writer Bill Finger,[1][2] and first appeared in Detective Comics #27 in 1939. Originally named the "Bat-Man," the character is also referred to by such epithets as the Caped Crusader, the Dark Knight, and the World's Greatest Detective.[5]
-
-        Batman's secret identity is Bruce Wayne, a wealthy American playboy, philanthropist, and owner of Wayne Enterprises. His origin depicts Bruce Wayne as a child, after witnessing the murder of his parents Dr. Thomas Wayne and Martha Wayne, he swore vengeance against criminals, an oath tempered by a sense of justice. Bruce Wayne trains himself physically and intellectually and crafts a bat-inspired persona to fight crime.[6]
-
-        Batman operates in the fictional Gotham City with assistance from various supporting characters, including his butler Alfred, police commissioner Jim Gordon, and vigilante allies such as Robin. Unlike most superheroes, Batman does not possess any inhuman superpowers. He does, however, possess a genius-level intellect, is a peerless martial artist, and his vast wealth affords him an extraordinary arsenal of weaponry and equipment. A large assortment of villains make up Batman's rogues gallery, including his archenemy, the Joker.
-
-        The character became popular soon after his introduction in 1939 and gained his own comic book title, Batman, the following year. As the decades went on, different interpretations of the character emerged. The late 1960s Batman television series used a camp aesthetic, which continued to be associated with the character for years after the show ended. Various creators worked to return the character to his dark roots, culminating in 1986 with The Dark Knight Returns by Frank Miller. The success of Warner Bros. Pictures' live-action Batman feature films have helped maintain the character's prominence in mainstream culture.[7]
-
-        Batman has been licensed and featured in various adaptations, from radio to television and film, and appears in merchandise sold around the world, such as apparel, toys, and video games. Kevin Conroy, Rino Romano, Anthony Ruivivar, Peter Weller, Bruce Greenwood, Jason O'Mara, and Will Arnett, among others, have provided the character's voice for animated adaptations. Batman has been depicted in both film and television by Lewis Wilson, Robert Lowery, Adam West, Michael Keaton, Val Kilmer, George Clooney, Bruce Thomas, Christian Bale, Ben Affleck, David Mazouz, Iain Glen, and Robert Pattinson.
+        Batman is a fictional superhero appearing in American comic books published by DC Comics.
+        The character was created by artist Bob Kane and writer Bill Finger,
+        and first appeared in Detective Comics #27 in 1939. Originally named the "Bat-Man,"
+        the character is also referred to by such epithets as the Caped Crusader, the Dark Knight, and the World's Greatest Detective.
     </main>
 </div>
 <div class="gridItem6">
     <h3> Naujausi darbai</h3>
         <div class="darbas">
-        <img src="/images/new%20york1.png" alt="miestas1" width="600" height="400">
+        <img src="/images/new%20york1.png" alt="miestas1">
             <small>Mano kitas darbas</small>
-        <img src="/images/new%20york2.jpeg" alt="miestas2" width="600" height="400">
+        <img src="/images/new%20york2.jpeg" alt="miestas2">
     </div>
 </div>
 <div class="gridItem7">
@@ -71,6 +66,7 @@
 </div>
 <div class="gridItem8">
     <span>Sukurta: Dovydo Labuèio</span>
+</div>
 </div>
 </body>
 </html>
