--- a/index.html
+++ b/index.html
@@ -56,9 +56,11 @@
 <div class="gridItem6">
     <h3> Naujausi darbai</h3>
         <div class="darbas">
-        <img src="/images/new%20york1.png" alt="miestas1">
-            <small>Mano kitas darbas</small>
-        <img src="/images/new%20york2.jpeg" alt="miestas2">
+        <img src="/images/new%20york1.png" alt="miestas1" height="2250" width="1487">
+            <br><small>Mano kitas darbas</small>
+        </div>
+    <div class="darbas">
+        <img src="/images/new%20york2.jpeg" alt="miestas2" height="1300" width="867">
     </div>
 </div>
 <div class="gridItem7">
