--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 <body>
 <div id="grid">
 <div class="gridItem1">
-     <img src="/images/batman%20logo.jpg" alt="logo" width="200" height="100">
+     <img src="/images/batman%20logo.jpg" alt="logo" width="820" height="547">
 </div>
 <div class="gridItem2">
     <div class=meniu-center>
-        <a class="active" href="#About-me">Apie mane</a>
+        <a class="active" href="#About-me">About me</a>
         <a href="#Portfolio">Portfolio</a>
-        <a href="#contact">Kontaktai</a>
+        <a href="#contact">Contacts</a>
     </div>`
 </div>
     <div class="gridItem3">
@@ -45,8 +45,8 @@
     </div>
 <div class="gridItem5">
     <main>
-        <h1>Pagrindinis puslapis</h1>
-        <p>Pirmas paragrafas</p>
+        <h1>BRUCE WAYNE</h1>
+        <p>The Dark Knight</p>
         Batman is a fictional superhero appearing in American comic books published by DC Comics.
         The character was created by artist Bob Kane and writer Bill Finger,
         and first appeared in Detective Comics #27 in 1939. Originally named the "Bat-Man,"
@@ -54,10 +54,10 @@
     </main>
 </div>
 <div class="gridItem6">
-    <h3> Naujausi darbai</h3>
+    <h3> Gotham</h3>
         <div class="darbas">
         <img src="/images/new%20york1.png" alt="miestas1" height="2250" width="1487">
-            <br><small>Mano kitas darbas</small>
+            <br><small>Metropolis</small>
         </div>
     <div class="darbas">
         <img src="/images/new%20york2.jpeg" alt="miestas2" height="1300" width="867">
