--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <meta name="viewport" content="width=device-width, initial-scale=5">
     <link rel="stylesheet" href="/css/mano.css">
-    <script src="js/batmobile.js"></script>
+    <script src="js/jquery.js"></script>
 </head>
 <body>
 <div id="grid">
@@ -14,10 +14,10 @@
 </div>
 <div class="gridItem2">
     <div class=meniu-center>
-        <a class="active" href="#About-me">About me</a>
-        <a href="#Portfolio">Portfolio</a>
-        <a href="#contact">Contacts</a>
-    </div>`
+        <a class="active" href="index.html">About me</a>
+        <a href="portfolio.html">Portfolio</a>
+        <a href="contact.html">Contacts</a>
+    </div>
 </div>
     <div class="gridItem3">
         <a class="login">
@@ -47,14 +47,13 @@
     <main>
         <h1>BRUCE WAYNE</h1>
         <p>The Dark Knight</p>
-        Batman is a fictional superhero appearing in American comic books published by DC Comics.
-        The character was created by artist Bob Kane and writer Bill Finger,
-        and first appeared in Detective Comics #27 in 1939. Originally named the "Bat-Man,"
-        the character is also referred to by such epithets as the Caped Crusader, the Dark Knight, and the World's Greatest Detective.
+        <img src="images/batman.jpg" alt="batman" height="433" width="768"/>
+        Batman is a fictional superhero appearing in American comic books published by DC Comics. The character was created by artist Bob Kane and writer Bill Finger, and first appeared in Detective Comics #27 in 1939. Originally named the "Bat-Man," the character is also referred to by such epithets as the Caped Crusader, the Dark Knight, and the World's Greatest Detective.
     </main>
 </div>
 <div class="gridItem6">
-    <h3> Gotham</h3>
+    <h3>Saved cities:</h3>
+    <br><small>Gotham</small>
         <div class="darbas">
         <img src="/images/new%20york1.png" alt="miestas1" height="2250" width="1487">
             <br><small>Metropolis</small>
