--- a/portfolio.html
+++ b/portfolio.html
@@ -5,7 +5,6 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <meta name="viewport" content="width=device-width, initial-scale=5">
     <link rel="stylesheet" href="/css/mano.css">
-    <script src="js/uzduotis15.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 </head>
 <body>
@@ -82,6 +81,6 @@
         <span>Sukurta: Dovydo Labučio</span>
     </div>
 </div>
-<script src="js/jquery.js"></script>
+<script src="js/jquery2.js"></script>
 </body>
 </html>
